2002-04-10 Baptiste Lepilleur <gaiacrtn@free.fr>

	* include/cppunitui/: moved to include/cppunit/ui (fix unix install problem).

	* doc/cookbook.dox:
	* examples/cppunittest/CppUnitTestMain.cpp:
	* examples/msvc/CppUnitTestApp/HostApp.cpp:
	* examples/msvc/HostApp/HostApp.cpp:
	* examples/qt/Main.Cpp:
	* examples/src/cppunit/TestRunner.cpp:
	* examples/src/msvc6/TestRunner/TestRunner.cpp:
	* examples/src/qttestrunner/TestRunner.cpp: updated to use <cppunit/ui/...> 
	instead of <cppunitui/...> in include directives.

	* doc/CppUnit-win.dox: generated documentation give the include path at the
	bottom of the page for each class.

	* NEWS: added compatibility break for 1.7.10 users.

2002-04-05 Baptiste Lepilleur <gaiacrtn@free.fr>

	* examples/cppunittest/CppUnitTestMain.cpp: never wait for a key press.

2002-04-04 Baptiste Lepilleur <gaiacrtn@free.fr>

	* NEW: added CPPUNIT_ASSERT_EQUAL_MESSAGE compatiblity break.

	* include/cppunit/TestAssert.h: changed arguments order for 
	CPPUNIT_ASSERT_EQUAL_MESSAGE. 'message' is now the first argument instead
	of the last (like CPPUNIT_ASSERT_MESSAGE).

	* examples/cppunittest/MockTestCase.cpp:
	* examples/cppunittest/MockTestListener.cpp: updated to reflect change on
	CPPUNIT_ASSERT_EQUAL_MESSAGE.

2002-03-28 Baptiste Lepilleur <gaiacrtn@free.fr>

	* configure.in: bumped version to 1.7.11

2002-03-28 Baptiste Lepilleur <gaiacrtn@free.fr>

	* doc/cookbook.html: removed. Replaced by cookbook.doc.

	* doc/cookbook.dox: added, conversion of cookbook.html to Doxygen format.

	* doc/other_documentation.dox: added groups definition.

	* doc/Makefile.am: replaced cookbook.html by cookbook.dox

	* doc/Doxyfile.in: added predefined CPPUNIT_HAVE_CPP_SOURCE_ANNOTATION.
	Replaced cookbook.html by cookbook.dox.

	* include/cppunitui/mfc/TestRunner.h: added, extracted from 
	include/msvc6/testrunner/TestRunner.h. Moved class TestRunner to namespace
	CppUnit::MfcUi.

	* include/msvc6/testrunner/TestRunner.h: deprecated. A simple typedef to