@@ -1,0 +1,5 @@
+libcppunitincludedir = $(includedir)/cppunit/ui/qt
+
+libcppunitinclude_HEADERS = \
+	TestRunner.h \
+	config.h
